--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src="/javaScript/script.js"></script>
+<script src="javaScript/script.js"></script>
 
 <head>
   <meta charset="UTF-8">
@@ -79,7 +79,7 @@
           </a>
           <div class="ml-24 for-lamp lamp--js cursor-pointer ">
             <svg class='for-lamp'>
-              <use xlink:href="/img/sprite.svg?v=40#lamp-svg"></use>
+              <use xlink:href="img/sprite.svg?v=40#lamp-svg"></use>
             </svg>
           </div>
         </nav>
