--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
           </div>
           <a class="for-svg svg-24" href="mailto:ivangaevskiy@mail.ru">
             <svg class='for-svg svg-24'>
-              <use xlink:href="/img/sprite.svg?v=9#email-svg"></use>
+              <use xlink:href="img/sprite.svg?v=9#email-svg"></use>
             </svg>
           </a>
           <a class="for-svg svg-24" href="https://t.me/Ivan_Ruby_Developer" target="_blank">
             <svg width="24px" height="24px" class='for-svg svg-24'>
-              <use xlink:href="/img/sprite.svg?v=10#telegram-svg"></use>
+              <use xlink:href="img/sprite.svg?v=10#telegram-svg"></use>
             </svg>
           </a>
           <a class="for-svg svg-24" href="https://github.com/IvanGaevskiy"
             target="_blank">
             <svg class='for-svg svg-24'>
-              <use xlink:href="/img/sprite.svg?v=11#github-svg"></use>
+              <use xlink:href="img/sprite.svg?v=11#github-svg"></use>
             </svg>
           </a>
           <a class="for-svg svg-24" href="pdf_rus2.pdf" target="_blank">
             <svg class='for-svg svg-24'>
-              <use xlink:href="/img/sprite.svg?v=18#pdf-svg"></use>
+              <use xlink:href="img/sprite.svg?v=18#pdf-svg"></use>
             </svg>
           </a>
           <div class="ml-24 for-lamp lamp--js cursor-pointer ">
