--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </article>
         <article>
           <h2 class="mb-5">Location, hobbies:</h2>
-          <p class="mb-5">Батуми, Грузия. Религиоведение, логика, актёрское мастерство, воркаут.</p>
+          <p class="mb-5">Батуми, Грузия. Религиоведение, актёрское мастерство, походы в горы, велосипед</p>
         </article>
       </main>
     </div>
