add favicon and fixes semantic tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Стили:
   ========================================================================= -->
   <link rel="stylesheet" href="styles.css">
-  <!-- <link rel="icon" href="img/profile_photo.jpg" type="image/x-icon"> -->
+  <link rel="icon" href="img/cat_favicon.svg" type="image/svg+xml">
 </head>
 
 <body class="body user-select-none">
@@ -45,12 +45,7 @@
             <div>Linux</div>
             <div>CI/CD</div>
             <div>SOLID</div>
-            <!-- <svg class="svg-18 cursor-pointer copy-stack--js">
-              <use xlink:href="/img/sprite.svg?v=99#copy-svg"></use>
-            </svg> -->
           </article>
-          <nav class="mt-10 mb-10 center inversion-column">
-          </nav>
 
         </div>
         <nav class="center ml-a display-flex gap-12">
@@ -58,28 +53,28 @@
           </div>
           <a class="for-svg svg-24" href="mailto:ivangaevskiy@mail.ru">
             <svg class='for-svg svg-24'>
-              <use xlink:href="img/sprite.svg?v=9#email-svg"></use>
+              <use xlink:href="img/sprite.svg?v=11#email-svg"></use>
             </svg>
           </a>
           <a class="for-svg svg-24" href="https://t.me/Ivan_Ruby_Developer" target="_blank">
             <svg width="24px" height="24px" class='for-svg svg-24'>
-              <use xlink:href="img/sprite.svg?v=10#telegram-svg"></use>
+              <use xlink:href="img/sprite.svg?v=13#telegram-svg"></use>
             </svg>
           </a>
           <a class="for-svg svg-24" href="https://github.com/IvanGaevskiy"
             target="_blank ">
             <svg class='for-svg svg-24'>
-              <use xlink:href="img/sprite.svg?v=11#github-svg"></use>
+              <use xlink:href="img/sprite.svg?v=12#github-svg"></use>
             </svg>
           </a>
           <a class="for-svg svg-24" href="pdf_rus2.pdf" target="_blank">
             <svg class='for-svg svg-24'>
-              <use xlink:href="img/sprite.svg?v=18#pdf-svg"></use>
+              <use xlink:href="img/sprite.svg?v=19#pdf-svg"></use>
             </svg>
           </a>
           <div class="ml-24 for-lamp lamp--js cursor-pointer ">
             <svg class='for-lamp'>
-              <use xlink:href="img/sprite.svg?v=40#lamp-svg"></use>
+              <use xlink:href="img/sprite.svg?v=42#lamp-svg"></use>
             </svg>
           </div>
         </nav>
@@ -118,14 +113,16 @@
         </article>
         <article>
           <h2 class="mb-5">Courses:</h2>
-          <h3 class="mt-5 mb-5">2022г</h3>
-          <nav class="mb-10">
-            <a class='for-link' href="https://rubyrush.ru" target="_blank">Ruby Rush</a>. Разработчик на языке Ruby.
-          </nav>
+          <h3 class="mt-5 mb-5">2025г</h3>
+          <div class="mb-10">
+            <a class='for-link' href="https://www.testdome.com/certificates/2ec4aafc28414effb7622728ed42804b" target="_blank">PUBLIC TEST ON Mar 5, 2025, Ruby On Rails</a>
+          </div>
           <h3 class="mt-5 mb-5">2024г</h3>
-          <nav class="mb-5">
-            <div>Полный курс по JavaScript. Илья Петриченко</div>
-          </nav>
+          <div class="mb-5">Полный курс по JavaScript. Илья Петриченко</div>
+          <h3 class="mt-5 mb-5">2022г</h3>
+          <div class="mb-10">
+            <a class='for-link' href="https://rubyrush.ru" target="_blank">Ruby Rush</a>. Разработчик на языке Ruby.
+          </div>
         </article>
         <article>
           <h2 class="mb-5">Location, hobbies:</h2>
